parser/tesseract_parser.go
// Code generated from ./grammar/tesseract.g4 by ANTLR 4.13.1. DO NOT EDIT.

package parser // tesseract

import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type tesseractParser struct {
	*antlr.BaseParser
}

var TesseractParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func tesseractParserInit() {
	staticData := &TesseractParserStaticData
	staticData.LiteralNames = []string{
		"", "','", "'[]'", "", "'import'", "'use'", "'package'", "'type'", "'const'",
		"'service'", "'gateway'", "'backend'", "'int'", "'int64'", "'int16'",
		"'byte'", "'bool'", "'string'", "'time'", "'struct'", "'get'", "'post'",
		"'put'", "'patch'", "'delete'", "'$data'", "'='", "':'", "'\"'", "'>'",
		"'<'", "'('", "')'", "'{'", "'}'", "';'", "'@'",
	}
	staticData.SymbolicNames = []string{
		"", "", "", "EscapedString", "IMPORT", "USE", "PACKAGE", "TYPE", "CONST",
		"SERVICE", "GATEWAY", "BACKEND", "INT", "LONG", "SHORT", "BYTE", "BOOL",
		"STRING", "DATETIME", "UNKNOWN", "GET", "POST", "PUT", "PATCH", "DELETE",
		"DATA", "EQ", "COLON", "DOUBLE_QUOTE", "GT", "LT", "LP", "RP", "LCB",
		"RCB", "SEMI", "AT", "IDENT", "NUMBER", "NEWLINE", "WS",
	}
	staticData.RuleNames = []string{
		"program", "importStatement", "useStatement", "packageStatement", "typeStatement",
		"constStatement", "serviceStatement", "gatewayStatement", "backendStatement",
		"typeDefinition", "type", "list", "fieldType", "field", "assignment",
		"arg", "call", "attribute", "request", "response", "rpc", "api",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// tesseractParserInit initializes any static state used to implement tesseractParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewtesseractParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func TesseractParserInit() {
	staticData := &TesseractParserStaticData
	staticData.once.Do(tesseractParserInit)
}

// NewtesseractParser produces a new parser instance for the optional input antlr.TokenStream.
func NewtesseractParser(input antlr.TokenStream) *tesseractParser {
	TesseractParserInit()
	this := new(tesseractParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &TesseractParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "tesseract.g4"

	return this
}

// tesseractParser tokens.
const (
	tesseractParserEOF           = antlr.TokenEOF
	tesseractParserT__0          = 1
	tesseractParserT__1          = 2
	tesseractParserEscapedString = 3
	tesseractParserIMPORT        = 4
	tesseractParserUSE           = 5
	tesseractParserPACKAGE       = 6
	tesseractParserTYPE          = 7
	tesseractParserCONST         = 8
	tesseractParserSERVICE       = 9
	tesseractParserGATEWAY       = 10
	tesseractParserBACKEND       = 11
	tesseractParserINT           = 12
	tesseractParserLONG          = 13
	tesseractParserSHORT         = 14
	tesseractParserBYTE          = 15
	tesseractParserBOOL          = 16
	tesseractParserSTRING        = 17
	tesseractParserDATETIME      = 18
	tesseractParserUNKNOWN       = 19
	tesseractParserGET           = 20
	tesseractParserPOST          = 21
	tesseractParserPUT           = 22
	tesseractParserPATCH         = 23
	tesseractParserDELETE        = 24
	tesseractParserDATA          = 25
	tesseractParserEQ            = 26
	tesseractParserCOLON         = 27
	tesseractParserDOUBLE_QUOTE  = 28
	tesseractParserGT            = 29
	tesseractParserLT            = 30
	tesseractParserLP            = 31
	tesseractParserRP            = 32
	tesseractParserLCB           = 33
	tesseractParserRCB           = 34
	tesseractParserSEMI          = 35
	tesseractParserAT            = 36
	tesseractParserIDENT         = 37
	tesseractParserNUMBER        = 38
	tesseractParserNEWLINE       = 39
	tesseractParserWS            = 40
)

// tesseractParser rules.
const (
	tesseractParserRULE_program          = 0
	tesseractParserRULE_importStatement  = 1
	tesseractParserRULE_useStatement     = 2
	tesseractParserRULE_packageStatement = 3
	tesseractParserRULE_typeStatement    = 4
	tesseractParserRULE_constStatement   = 5
	tesseractParserRULE_serviceStatement = 6
	tesseractParserRULE_gatewayStatement = 7
	tesseractParserRULE_backendStatement = 8
	tesseractParserRULE_typeDefinition   = 9
	tesseractParserRULE_type             = 10
	tesseractParserRULE_list             = 11
	tesseractParserRULE_fieldType        = 12
	tesseractParserRULE_field            = 13
	tesseractParserRULE_assignment       = 14
	tesseractParserRULE_arg              = 15
	tesseractParserRULE_call             = 16
	tesseractParserRULE_attribute        = 17
	tesseractParserRULE_request          = 18
	tesseractParserRULE_response         = 19
	tesseractParserRULE_rpc              = 20
	tesseractParserRULE_api              = 21
)

// IProgramContext is an interface to support dynamic dispatch.
type IProgramContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	PackageStatement() IPackageStatementContext
	AllImportStatement() []IImportStatementContext
	ImportStatement(i int) IImportStatementContext
	AllUseStatement() []IUseStatementContext
	UseStatement(i int) IUseStatementContext
	AllTypeStatement() []ITypeStatementContext
	TypeStatement(i int) ITypeStatementContext
	AllConstStatement() []IConstStatementContext
	ConstStatement(i int) IConstStatementContext
	AllServiceStatement() []IServiceStatementContext
	ServiceStatement(i int) IServiceStatementContext
	AllBackendStatement() []IBackendStatementContext
	BackendStatement(i int) IBackendStatementContext
	AllGatewayStatement() []IGatewayStatementContext
	GatewayStatement(i int) IGatewayStatementContext

	// IsProgramContext differentiates from other interfaces.
	IsProgramContext()
}

type ProgramContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyProgramContext() *ProgramContext {
	var p = new(ProgramContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = tesseractParserRULE_program
	return p
}

func InitEmptyProgramContext(p *ProgramContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = tesseractParserRULE_program
}

func (*ProgramContext) IsProgramContext() {}

func NewProgramContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ProgramContext {
	var p = new(ProgramContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = tesseractParserRULE_program

	return p
}

func (s *ProgramContext) GetParser() antlr.Parser { return s.parser }

func (s *ProgramContext) PackageStatement() IPackageStatementContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IPackageStatementContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IPackageStatementContext)
}

func (s *ProgramContext) AllImportStatement() []IImportStatementContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IImportStatementContext); ok {
			len++
		}
	}

	tst := make([]IImportStatementContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IImportStatementContext); ok {
			tst[i] = t.(IImportStatementContext)
			i++
		}
	}

	return tst
}

func (s *ProgramContext) ImportStatement(i int) IImportStatementContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IImportStatementContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IImportStatementContext)
}

func (s *ProgramContext) AllUseStatement() []IUseStatementContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IUseStatementContext); ok {
			len++
		}
	}

	tst := make([]IUseStatementContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IUseStatementContext); ok {
			tst[i] = t.(IUseStatementContext)
			i++
		}
	}

	return tst
}

func (s *ProgramContext) UseStatement(i int) IUseStatementContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IUseStatementContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IUseStatementContext)
}

func (s *ProgramContext) AllTypeStatement() []ITypeStatementContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(ITypeStatementContext); ok {
			len++
		}
	}

	tst := make([]ITypeStatementContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(ITypeStatementContext); ok {
			tst[i] = t.(ITypeStatementContext)
			i++
		}
	}

	return tst
}

func (s *ProgramContext) TypeStatement(i int) ITypeStatementContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITypeStatementContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITypeStatementContext)
}

func (s *ProgramContext) AllConstStatement() []IConstStatementContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IConstStatementContext); ok {
			len++
		}
	}

	tst := make([]IConstStatementContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IConstStatementContext); ok {
			tst[i] = t.(IConstStatementContext)
			i++
		}
	}

	return tst
}

func (s *ProgramContext) ConstStatement(i int) IConstStatementContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IConstStatementContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IConstStatementContext)
}

func (s *ProgramContext) AllServiceStatement() []IServiceStatementContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IServiceStatementContext); ok {
			len++
		}
	}

	tst := make([]IServiceStatementContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IServiceStatementContext); ok {
			tst[i] = t.(IServiceStatementContext)
			i++
		}
	}

	return tst
}

func (s *ProgramContext) ServiceStatement(i int) IServiceStatementContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IServiceStatementContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IServiceStatementContext)
}

func (s *ProgramContext) AllBackendStatement() []IBackendStatementContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IBackendStatementContext); ok {
			len++
		}
	}

	tst := make([]IBackendStatementContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IBackendStatementContext); ok {
			tst[i] = t.(IBackendStatementContext)
			i++
		}
	}

	return tst
}

func (s *ProgramContext) BackendStatement(i int) IBackendStatementContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IBackendStatementContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IBackendStatementContext)
}

func (s *ProgramContext) AllGatewayStatement() []IGatewayStatementContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IGatewayStatementContext); ok {
			len++
		}
	}

	tst := make([]IGatewayStatementContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IGatewayStatementContext); ok {
			tst[i] = t.(IGatewayStatementContext)
			i++
		}
	}

	return tst
}

func (s *ProgramContext) GatewayStatement(i int) IGatewayStatementContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IGatewayStatementContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IGatewayStatementContext)
}

func (s *ProgramContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ProgramContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ProgramContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(tesseractListener); ok {
		listenerT.EnterProgram(s)
	}
}

func (s *ProgramContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(tesseractListener); ok {
		listenerT.ExitProgram(s)
	}
}

func (p *tesseractParser) Program() (localctx IProgramContext) {
	localctx = NewProgramContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, tesseractParserRULE_program)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(44)
		p.PackageStatement()
	}
	p.SetState(54)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for (int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&68719480752) != 0 {
		p.SetState(52)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}

		switch p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 0, p.GetParserRuleContext()) {
		case 1:
			{
				p.SetState(45)
				p.ImportStatement()
			}

		case 2:
			{
				p.SetState(46)
				p.UseStatement()
			}

		case 3:
			{
				p.SetState(47)
				p.TypeStatement()
			}

		case 4:
			{
				p.SetState(48)
				p.ConstStatement()
			}

		case 5:
			{
				p.SetState(49)
				p.ServiceStatement()
			}

		case 6:
			{
				p.SetState(50)
				p.BackendStatement()
			}

		case 7:
			{
				p.SetState(51)
				p.GatewayStatement()
			}

		case antlr.ATNInvalidAltNumber:
			goto errorExit
		}

		p.SetState(56)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IImportStatementContext is an interface to support dynamic dispatch.
type IImportStatementContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	IMPORT() antlr.TerminalNode
	EscapedString() antlr.TerminalNode
	SEMI() antlr.TerminalNode

	// IsImportStatementContext differentiates from other interfaces.
	IsImportStatementContext()
}

type ImportStatementContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyImportStatementContext() *ImportStatementContext {
	var p = new(ImportStatementContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = tesseractParserRULE_importStatement
	return p
}

func InitEmptyImportStatementContext(p *ImportStatementContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = tesseractParserRULE_importStatement
}

func (*ImportStatementContext) IsImportStatementContext() {}

func NewImportStatementContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ImportStatementContext {
	var p = new(ImportStatementContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = tesseractParserRULE_importStatement

	return p
}

func (s *ImportStatementContext) GetParser() antlr.Parser { return s.parser }

func (s *ImportStatementContext) IMPORT() antlr.TerminalNode {
	return s.GetToken(tesseractParserIMPORT, 0)
}

func (s *ImportStatementContext) EscapedString() antlr.TerminalNode {
	return s.GetToken(tesseractParserEscapedString, 0)
}

func (s *ImportStatementContext) SEMI() antlr.TerminalNode {
	return s.GetToken(tesseractParserSEMI, 0)
}

func (s *ImportStatementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ImportStatementContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ImportStatementContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(tesseractListener); ok {
		listenerT.EnterImportStatement(s)
	}
}

func (s *ImportStatementContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(tesseractListener); ok {
		listenerT.ExitImportStatement(s)
	}
}

func (p *tesseractParser) ImportStatement() (localctx IImportStatementContext) {
	localctx = NewImportStatementContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, tesseractParserRULE_importStatement)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(57)
		p.Match(tesseractParserIMPORT)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(58)
		p.Match(tesseractParserEscapedString)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(59)
		p.Match(tesseractParserSEMI)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IUseStatementContext is an interface to support dynamic dispatch.
type IUseStatementContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	USE() antlr.TerminalNode
	IDENT() antlr.TerminalNode
	SEMI() antlr.TerminalNode

	// IsUseStatementContext differentiates from other interfaces.
	IsUseStatementContext()
}

type UseStatementContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyUseStatementContext() *UseStatementContext {
	var p = new(UseStatementContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = tesseractParserRULE_useStatement
	return p
}

func InitEmptyUseStatementContext(p *UseStatementContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = tesseractParserRULE_useStatement
}

func (*UseStatementContext) IsUseStatementContext() {}

func NewUseStatementContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *UseStatementContext {
	var p = new(UseStatementContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = tesseractParserRULE_useStatement

	return p
}

func (s *UseStatementContext) GetParser() antlr.Parser { return s.parser }

func (s *UseStatementContext) USE() antlr.TerminalNode {
	return s.GetToken(tesseractParserUSE, 0)
}

func (s *UseStatementContext) IDENT() antlr.TerminalNode {
	return s.GetToken(tesseractParserIDENT, 0)
}

func (s *UseStatementContext) SEMI() antlr.TerminalNode {
	return s.GetToken(tesseractParserSEMI, 0)
}

func (s *UseStatementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *UseStatementContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *UseStatementContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(tesseractListener); ok {
		listenerT.EnterUseStatement(s)
	}
}

func (s *UseStatementContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(tesseractListener); ok {
		listenerT.ExitUseStatement(s)
	}
}

func (p *tesseractParser) UseStatement() (localctx IUseStatementContext) {
	localctx = NewUseStatementContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, tesseractParserRULE_useStatement)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(61)
		p.Match(tesseractParserUSE)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(62)
		p.Match(tesseractParserIDENT)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(63)
		p.Match(tesseractParserSEMI)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IPackageStatementContext is an interface to support dynamic dispatch.
type IPackageStatementContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	PACKAGE() antlr.TerminalNode
	IDENT() antlr.TerminalNode
	SEMI() antlr.TerminalNode

	// IsPackageStatementContext differentiates from other interfaces.
	IsPackageStatementContext()
}

type PackageStatementContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyPackageStatementContext() *PackageStatementContext {
	var p = new(PackageStatementContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = tesseractParserRULE_packageStatement
	return p
}

func InitEmptyPackageStatementContext(p *PackageStatementContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = tesseractParserRULE_packageStatement
}

func (*PackageStatementContext) IsPackageStatementContext() {}

func NewPackageStatementContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *PackageStatementContext {
	var p = new(PackageStatementContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = tesseractParserRULE_packageStatement

	return p
}

func (s *PackageStatementContext) GetParser() antlr.Parser { return s.parser }

func (s *PackageStatementContext) PACKAGE() antlr.TerminalNode {
	return s.GetToken(tesseractParserPACKAGE, 0)
}

func (s *PackageStatementContext) IDENT() antlr.TerminalNode {
	return s.GetToken(tesseractParserIDENT, 0)
}

func (s *PackageStatementContext) SEMI() antlr.TerminalNode {
	return s.GetToken(tesseractParserSEMI, 0)
}

func (s *PackageStatementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *PackageStatementContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *PackageStatementContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(tesseractListener); ok {
		listenerT.EnterPackageStatement(s)
	}
}

func (s *PackageStatementContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(tesseractListener); ok {
		listenerT.ExitPackageStatement(s)
	}
}

func (p *tesseractParser) PackageStatement() (localctx IPackageStatementContext) {
	localctx = NewPackageStatementContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, tesseractParserRULE_packageStatement)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(65)
		p.Match(tesseractParserPACKAGE)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(66)
		p.Match(tesseractParserIDENT)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(67)
		p.Match(tesseractParserSEMI)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ITypeStatementContext is an interface to support dynamic dispatch.
type ITypeStatementContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	TYPE() antlr.TerminalNode
	LP() antlr.TerminalNode
	RP() antlr.TerminalNode
	AllAttribute() []IAttributeContext
	Attribute(i int) IAttributeContext
	AllTypeDefinition() []ITypeDefinitionContext
	TypeDefinition(i int) ITypeDefinitionContext
	AllSEMI() []antlr.TerminalNode
	SEMI(i int) antlr.TerminalNode

	// IsTypeStatementContext differentiates from other interfaces.
	IsTypeStatementContext()
}

type TypeStatementContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyTypeStatementContext() *TypeStatementContext {
	var p = new(TypeStatementContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = tesseractParserRULE_typeStatement
	return p
}

func InitEmptyTypeStatementContext(p *TypeStatementContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = tesseractParserRULE_typeStatement
}

func (*TypeStatementContext) IsTypeStatementContext() {}

func NewTypeStatementContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *TypeStatementContext {
	var p = new(TypeStatementContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = tesseractParserRULE_typeStatement

	return p
}

func (s *TypeStatementContext) GetParser() antlr.Parser { return s.parser }

func (s *TypeStatementContext) TYPE() antlr.TerminalNode {
	return s.GetToken(tesseractParserTYPE, 0)
}

func (s *TypeStatementContext) LP() antlr.TerminalNode {
	return s.GetToken(tesseractParserLP, 0)
}

func (s *TypeStatementContext) RP() antlr.TerminalNode {
	return s.GetToken(tesseractParserRP, 0)
}

func (s *TypeStatementContext) AllAttribute() []IAttributeContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IAttributeContext); ok {
			len++
		}
	}

	tst := make([]IAttributeContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IAttributeContext); ok {
			tst[i] = t.(IAttributeContext)
			i++
		}
	}

	return tst
}

func (s *TypeStatementContext) Attribute(i int) IAttributeContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IAttributeContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IAttributeContext)
}

func (s *TypeStatementContext) AllTypeDefinition() []ITypeDefinitionContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(ITypeDefinitionContext); ok {
			len++
		}
	}

	tst := make([]ITypeDefinitionContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(ITypeDefinitionContext); ok {
			tst[i] = t.(ITypeDefinitionContext)
			i++
		}
	}

	return tst
}

func (s *TypeStatementContext) TypeDefinition(i int) ITypeDefinitionContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITypeDefinitionContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITypeDefinitionContext)
}

func (s *TypeStatementContext) AllSEMI() []antlr.TerminalNode {
	return s.GetTokens(tesseractParserSEMI)
}

func (s *TypeStatementContext) SEMI(i int) antlr.TerminalNode {
	return s.GetToken(tesseractParserSEMI, i)
}

func (s *TypeStatementContext) GetRuleContext() antlr.RuleContext {
	return s
}
